--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "ajv": "^6.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ngx-infinite-scroll": "^0.8.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
